Fixed some navbar issues on smaller screens

--- a/social-frontend/src/Components/navbar/navbar_styles.module.scss
+++ b/social-frontend/src/Components/navbar/navbar_styles.module.scss
@@ -18,5 +18,9 @@
     .noDropdownArrow a::after {
         display: none !important;
     }
+
+    .notificationWrapper {
+        width: fit-content;
+    }
 }
 
